[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "occipet"
version = "0.1.0"
description = ""
authors = [
    {name = "Valentin", email = "valentin.gautier.inp@gmail.com"},
]
dependencies = [
    "numpy<2.0.0,>=1.22.4",
    "brainweb<2.0.0,>=1.6.2",
    "nibabel<4.0.0,>=3.2.2",
    "pydicom<3.0.0,>=2.3.0",
    "scipy<2.0.0,>=1.8.1",
    "pandas<2.0.0,>=1.4.2",
    "typer<1.0.0,>=0.4.1",
    "setuptools<63.0.0,>=62.4.0",
    "matplotlib<4.0.0,>=3.5.2",
    "scikit-image<1.0.0,>=0.19.3",
    "hydra-core<2.0.0,>=1.3.1",
    "tensorflow>=2.11",
    "SimpleITK>=2.5.0",
]
requires-python = "~=3.10"
readme = "README.md"
license = {text = "MIT"}


[project.scripts]
occipet = "occipet.app:app"
deep_learning = "deep_learning.app:app"

[dependency-groups]
dev = [
    "black<24.0.0,>=23.1.0",
    "flake8<7.0.0,>=6.0.0",
    "jupyterlab<4.0.0,>=3.4.3",
    "pytest<8.0.0,>=7.2.1",
    "pyright<2.0.0,>=1.1.292",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["occipet", "deep_learning"]